# pyproject.toml
[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "census-kmz-maker"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "simplekml>=1.3.6",
    "pandas>=2.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["kmz_maker*"]
